@@ -4,6 +4,8 @@ dev:
   * core: "align sites" now only computes on largest contiguous area
   * core: move free surface correction term from qopen.rt module to the calculation of observed energy
   * core: free surface correction is configurable
+  * core: new command line option "--calc-source-params" for re-calculating source parameters
+  * core: other new not very important but useful command line options
 v1.1:
   * bugfix: energy envelope and not velocity seismogram is now divided by filter width
   * bugfix: bulk wave was not correctly handled if beginning of coda window was before S-onset
